Remove Spotify API